--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,15 +9,16 @@
 </div>
 
 <footer>
-    <div id="footer">
-      <div class="container">
-        <p class="text-muted">&copy; All rights reserved.</p>
-      </div>
+  <div class="go-back">
+      <a href="https://deemonsecurity.com"><img src="img/avatar.png" alt="Go Back to Deemonsecurity.com"></a>
+  <div>
+  
+  <div id="footer">
+    <div class="container">
+      <p class="text-muted">&copy; All rights reserved.</p>
     </div>
+  </div>
   
-    <button class="btn-toggle"><i class="fa fa-sun-o"></i></button>
-  
-  </footer>
-<div class="footer"></div>
+</footer>
 
 {{ partial "js" . }}  
