--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
 
 <footer>
   <div class="go-back">
-      <a href="https://deemonsecurity.com"><img src="img/avatar.png" alt="Go Back to Deemonsecurity.com"></a>
+      <a href="https://deemonsecurity.com"><img src="{{ .Site.BaseURL }}img/avatar.png" alt="Go Back to Deemonsecurity.com"></a>
   <div>
   
   <div id="footer">
