Fix home button

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -222,15 +222,18 @@ footer {
   height: 100px;
 }
 
-div.go-back > a > img {
-  position: fixed;
-  height: 50px;
-  width: auto;
-  bottom: 30px;
-  left: 30px;
+body > div.singlePage > footer > a > i {
+  color: var(--dark);
+  background-color: var(--light);
   z-index: 3;
-  border-radius: 50px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  transition-duration: 1s;
+
+  &:hover {
+    color: var(--secondary);
+  }
 }
 
 @media all and (max-width: 762px) {
