--- a/assets/darkmode.scss
+++ b/assets/darkmode.scss
@@ -15,11 +15,12 @@
 
   & svg {
     opacity: 0;
-    position: absolute;
+    position: fixed;
     width: 20px;
     height: 20px;
-    top: calc(50% - 10px);
+    bottom: 30px;
     margin: 0 7px;
+    right: 30px;
     fill: var(--gray);
     transition: opacity 0.1s ease;
   }
