--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,10 +1,10 @@
 <head>
-    <!-- Meta tags -->
-    <meta charset="UTF-8">
-    <title>{{ if .Title }}{{ .Title }}{{ else }}{{ $.Site.Data.config.page_title }}{{ end }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
-    <meta name="author" content="{{ .Site.Params.Author }}" />
+  <!-- Meta tags -->
+  <meta charset="UTF-8">
+  <title>{{ if .Title }}{{ .Title }}{{ else }}{{ $.Site.Data.config.page_title }}{{ end }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="/icon.png" />
+  <meta name="author" content="{{ .Site.Params.Author }}" />
   {{ if .Site.Params.description }}
   <meta name="description" content="{{ .Site.Params.description }}">{{ end }}
   <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
@@ -26,40 +26,41 @@
   <meta name="theme-color" content="#1A1A1D">
 
 
-    <!-- CSS Stylesheets and Fonts -->
+  <!-- CSS Stylesheets and Fonts -->
 
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Sans+Pro:wght@400;700&family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/boostrap-grid.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Source+Sans+Pro:wght@400;700&family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/boostrap-grid.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    {{ $css := slice "custom.scss" "base.scss" "darkmode.scss" "syntax.scss"}}
-    {{range $css}}
-    {{$sass := resources.Get . | resources.ToCSS }}
-    {{with $sass | minify}}
-    <style>
-        {{.Content | safeCSS}}
-    </style>
-    {{end}}
-    {{end}}
+  {{ $css := slice "custom.scss" "base.scss" "darkmode.scss" "syntax.scss"}}
+  {{range $css}}
+  {{$sass := resources.Get . | resources.ToCSS }}
+  {{with $sass | minify}}
+  <style>
+      {{.Content | safeCSS}}
+  </style>
+  {{end}}
+  {{end}}
 
-    {{ .Hugo.Generator }}
+  {{ .Hugo.Generator }}
 
-    {{ range .Site.Params.custom_css }}
-    <link rel="stylesheet" href="{{ $.Site.BaseURL}}{{ . }}">
-    {{ end }}
+  {{ range .Site.Params.custom_css }}
+  <link rel="stylesheet" href="{{ $.Site.BaseURL}}{{ . }}">
+  {{ end }}
 
-    {{ `<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->` | safeHTML }}
+  {{ `<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->` | safeHTML }}
 
-    {{- with resources.Get "darkmode.js" | minify -}}
-    <script>
-      {{.Content | safeJS }}
-    </script>
-    {{- end -}}
+  {{- with resources.Get "darkmode.js" | minify -}}
+  <script>
+    {{.Content | safeJS }}
+  </script>
+  {{- end -}}
 </head>
 {{ template "_internal/google_analytics.html" . }}
