Add 404 and initial posts

--- a/assets/custom.scss
+++ b/assets/custom.scss
@@ -222,6 +222,8 @@ footer {
   height: 100px;
 }
 
+
+body > div.wrapper > div.singlePage > footer > a > i,
 body > div.singlePage > footer > a > i {
   color: var(--dark);
   background-color: var(--light);
